math-core/tests/snapshots/wiki_test__wiki130.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\begin{cases} 3x + 5y + z \\\\ 7x - 2y + 4z \\\\ -6x + 3y + 2z \\end{cases}"
---
<math>
    <mrow>
        <mo>{</mo>
        <mtable>
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mn>3</mn>
                    <mi>x</mi>
                    <mo>+</mo>
                    <mn>5</mn>
                    <mi>y</mi>
                    <mo>+</mo>
                    <mi>z</mi>
                </mtd>
            </mtr>
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mn>7</mn>
                    <mi>x</mi>
                    <mo>−</mo>
                    <mn>2</mn>
                    <mi>y</mi>
                    <mo>+</mo>
                    <mn>4</mn>
                    <mi>z</mi>
                </mtd>
            </mtr>
            <mtr>
                <mtd style="text-align: left;justify-items: start;padding-right: 0;">
                    <mo>−</mo>
                    <mn>6</mn>
                    <mi>x</mi>
                    <mo>+</mo>
                    <mn>3</mn>
                    <mi>y</mi>
                    <mo>+</mo>
                    <mn>2</mn>
                    <mi>z</mi>
                </mtd>
            </mtr>
        </mtable>
        <mo></mo>
    </mrow>
</math>
