math-core/tests/snapshots/wiki_test__wiki137.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\left \\{ \\frac{a}{b} \\right \\} \\quad \\left \\lbrace \\frac{a}{b} \\right \\rbrace"
---
<math>
    <mrow>
        <mo>{</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo>}</mo>
    </mrow>
    <mspace width="1em"/>
    <mrow>
        <mo>{</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo>}</mo>
    </mrow>
</math>
