math-core/tests/snapshots/wiki_test__wiki138.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\left \\langle \\frac{a}{b} \\right \\rangle"
---
<math>
    <mrow>
        <mo>⟨</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo>⟩</mo>
    </mrow>
</math>
