math-core/tests/snapshots/wiki_test__wiki140.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\left \\lfloor \\frac{a}{b} \\right \\rfloor \\quad \\left \\lceil \\frac{c}{d} \\right \\rceil"
---
<math>
    <mrow>
        <mo>⌊</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo>⌋</mo>
    </mrow>
    <mspace width="1em"/>
    <mrow>
        <mo>⌈</mo>
        <mfrac>
            <mi>c</mi>
            <mi>d</mi>
        </mfrac>
        <mo>⌉</mo>
    </mrow>
</math>
